--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
 </main>
 
 <footer class="text-muted">
-  <div class="container text-center  " >
+  <div class="container text-center bg-light " >
     <p>Navia Life Care Product</p>
   </div>
 </footer>
