--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,13 +6,19 @@
   <div class="container">
 
     <div class="row">
+      <div class="container text-center ">
+        <h1><font color="#f7ab2f">Your Personal MedScheduler , Health Matters!!!</font></h1>
+        <hr>
+      </div>
+      <br>
       {%for medicines in med.all %}
+
       <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <img src='{% static 'logo.png'%}' height="100" width="350"  \>
-          <div class="card-body">
+        <div class="card mb-4 shadow-sm ">
+          <img src='{% static 'logo.png'%}' height="200" width="350"  \>
+          <div class="card-body bg-warning ">
             <p class="card-text">Medicine Name: {{ medicines.medicine_name }}</p>
-            <p class="card-text">Dosage: {{ medicines.frequency }}</p>
+            <p class="card-text">Dosage: {{ medicines.frequency }}  times a day</p>
             <p class="card-text">Medicine Timings: {{ medicines.select_timing }}</p>
             <p class="card-text">Medicine Duration: {{ medicines.med_duration }} days</p>
             <p class="card-text">treatment Duration: {{ medicines.treatment_duration }} days</p>
