--- a/templates/base.html
+++ b/templates/base.html
@@ -48,15 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto" >
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'createmed' %}"><span class="oi oi-plus"></span></a>
-            <a class="nav-item nav-link active" href="javascript:{document.getElementById('logout').submit()}">logout</a>
+            <a class="nav-item nav-link active" href="{% url 'createmed' %}"><span class="oi oi-plus"></span></a>
+            <a class="nav-item nav-link active" href="{%url 'detail'%}">Schedule</a>
+            <a class="nav-item nav-link active" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
             <form id="logout" action="{%url 'logout' %}" method="post">
               {% csrf_token %}
               <input type="hidden" name="" value="">
             </form>
             {%else%}
-            <a class="nav-item nav-link" href="{%url 'login'%}">login </a>
-            <a class="nav-item nav-link" href="{%url 'signup'%}">Sign Up </a>
+            <a class="nav-item nav-link active" href="{%url 'login'%}">Login </a>
+            <a class="nav-item nav-link active" href="{%url 'signup'%}">Sign Up </a>
             {% endif %}
 
           </div>
